Skip to content

eac3 sound (Dolby Digital Plus) does not work

I am using VideoLan 2.2.1 on Arch Linux (packaged by distro) to watch DVB-T channels.

One of them has eac3 sound, but it seems wrongly detected as a52 audio (ac3) producing whistles instead normal sound.

This channel works fine with mplayer, mpv or xine on Linux.

It also works with MPC-HC on Windows 7.

Also I tried vlc-nightly 2.2.0 and 3.0.0 but it still does not work.

It works fine if I force it to use avcodec:

vlc dvb-t://frequency=682000000:bandwidth=8 --codec=avcodec

I attach a log file. Relevant lines are:

avcodec debug: avcodec codec (H264 - MPEG-4 AVC (part 10)) started
avcodec debug: using frame thread mode with 4 threads
core debug: using decoder module "avcodec"
core debug: looking for packetizer module matching "any": 23 candidates
core debug: using packetizer module "packetizer_h264"
core debug: looking for decoder module matching "any": 44 candidates
core debug: using decoder module "a52"
ts debug: DEMUX_SET_GROUP 0 (nil)

Also I attach a ts dump to test.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information