demux: ts: check for EAC3 before AC3 logic channels descriptor (fix #16316)